# lychee

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/animation/: cat1.txt  cat2.txt  cat3.txt  catawake1.txt  catawake2.txt  catawake3.txt
docs/roadmap-changelog/: roadmap.mdx
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  ChatComposer.tsx  MarkdownRenderer.tsx  RightSidebar.tsx  SessionInfoDropdown.tsx  SessionInfoPanel.tsx  Sidebar.tsx  ToolCallDisplay.tsx  ToolDetailPanel.tsx  TopBar.tsx  WorklogSection.tsx
frontend/src/lib/: sessions.ts
relay/: Cargo.toml
relay/src/: main.rs
web/: package-lock.json  package.json
web/app/: MarkdownRenderer.tsx  globals.css  page.tsx
web/app/components/: Sidebar.tsx  StatusBar.tsx
