[package]
name = "lychee"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lychee"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
